@@ -10,6 +10,7 @@ if [ -z "${DOCKER_PRODUCTION}" ]; then
 
       java -Djava.security.egd=file:/dev/./urandom -jar app.jar \
         --server.port="${port}" --spring.profiles.active=docker
+        --add-opens java.base/java.time=ALL-UNNAMED
 
     else
 
@@ -24,6 +25,7 @@ if [ -z "${DOCKER_PRODUCTION}" ]; then
         -Dftp.nonProxyHosts=*.ebi.ac.uk\|localhost\|127.0.0.1 \
         -jar app.jar \
         --server.port="${port}" --spring.profiles.active=docker
+        --add-opens java.base/java.time=ALL-UNNAMED
 
     fi
 
@@ -33,6 +35,7 @@ if [ -z "${DOCKER_PRODUCTION}" ]; then
 
       java -Djava.security.egd=file:/dev/./urandom -jar app.jar \
         --server.port="${port}" --spring.profiles.active=dockergentarschema
+        --add-opens java.base/java.time=ALL-UNNAMED
 
     else
 
@@ -47,6 +50,7 @@ if [ -z "${DOCKER_PRODUCTION}" ]; then
         -Dftp.nonProxyHosts=*.ebi.ac.uk\|localhost\|127.0.0.1 \
         -jar app.jar \
         --server.port="${port}" --spring.profiles.active=dockergentarschema
+        --add-opens java.base/java.time=ALL-UNNAMED
 
     fi
 
@@ -58,6 +62,7 @@ else
 
     java -Djava.security.egd=file:/dev/./urandom -jar app.jar \
       --server.port="${port}" --spring.profiles.active=dockerproduction
+      --add-opens java.base/java.time=ALL-UNNAMED
 
   else
 
@@ -72,6 +77,7 @@ else
       -Dftp.nonProxyHosts=*.ebi.ac.uk\|localhost\|127.0.0.1 \
       -jar app.jar \
       --server.port="${port}" --spring.profiles.active=dockerproduction
+      --add-opens java.base/java.time=ALL-UNNAMED
 
   fi
 
